name:                nagios-perfdata
version:             0.2.1
synopsis:            Parse Nagios performance data.
description:         Provides an interface for parsing Nagios
                     performance data formatted according to the plugin
                     development guidelines. 
homepage:            https://github.com/anchor/nagios-perfdata
license:             BSD3
license-file:        LICENSE
author:              Sharif Olorin
maintainer:          sio@tesser.org
copyright:           2014 Anchor Systems
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:   Data.Nagios.Perfdata
                     Data.Nagios.Perfdata.Metric,
                     Data.Nagios.Perfdata.Error,
                     Data.Nagios.Perfdata.GearmanResult,
                     Data.Nagios.Perfdata.Template
  build-depends:     base >=4.6,
                     bytestring, 
                     mtl,
                     containers,
                     attoparsec,
                     bifunctors
  hs-source-dirs:    src
  default-language:  Haskell2010
  ghc-options:       -Wall
                     -Wwarn
                     -fwarn-tabs

test-suite           perfdata-test
  hs-source-dirs:    tests
  main-is:           Perfdata.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010

  build-depends:     base >=4.6,
                     hspec,
                     bytestring,
                     nagios-perfdata,
                     HUnit,
                     MissingH,
                     transformers

  ghc-options:       -Wall
                     -Wwarn
                     -fwarn-tabs
